// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should be rendered correctly 1`] = `
<div
  className="container uui-input-box root uui-textarea uui-size-36 mode-form"
  onFocus={[Function]}
  tabIndex={-1}
>
  <textarea
    className="-clickable noAutoSize uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    tabIndex={0}
    value=""
  />
</div>
`;

exports[`TextArea should be rendered correctly 2`] = `
<div
  className="container uui-input-box root uui-textarea uui-size-36 mode-inline"
  onFocus={[Function]}
  tabIndex={-1}
>
  <textarea
    className="-clickable noAutoSize uui-input"
    maxLength={200}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here"
    rows={4}
    tabIndex={0}
    value=""
  />
</div>
`;
